fixed overflow

--- a/src/style/_Home.scss
+++ b/src/style/_Home.scss
@@ -43,7 +43,7 @@
 }
 
 .land-prepare {
-  width: 100vw;
+  width: 100%;
   color: #333;
 }
 
