--- a/src/style/_MediaHome.scss
+++ b/src/style/_MediaHome.scss
@@ -5,7 +5,7 @@
   }
 
   .landing-hero {
-    width: 100%;
+    width: 98%;
     height: 570px;
     background-image: none;
     margin: 10px 1% 20px 1%;
